0.0.5

	* Fix Client#new with timeout option

0.0.4

	* Better detection of closed connections

0.0.3

  * Fix handling of multi-byte UTF-8 characters

0.0.2

	* Added CassandraCql::Client#reset_connection
	* Attempt to reset connection on socket error (like after forking)

0.0.1

	* Initial release